--- a/MeaningOut/Base.lproj/LaunchScreen.storyboard
+++ b/MeaningOut/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,38 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="EpP-sn-6nT">
-                                <rect key="frame" x="20" y="249.66666666666663" width="353" height="353"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="EpP-sn-6nT" secondAttribute="height" id="4k2-af-xPa"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MeaningOut" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zb4-07-we6">
-                                <rect key="frame" x="0.0" y="181.66666666666666" width="393" height="48"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
-                                <color key="textColor" red="0.93725490196078431" green="0.53725490196078429" blue="0.27450980392156865" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="최민경" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o9F-pJ-xbB">
-                                <rect key="frame" x="170.66666666666666" y="602.66666666666663" width="52" height="24"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                <color key="textColor" red="0.93725490199999995" green="0.53725490200000003" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trendy Style" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zb4-07-we6">
+                                <rect key="frame" x="96.333333333333329" y="304.33333333333331" width="200.66666666666669" height="143.33333333333331"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="60"/>
+                                <color key="textColor" red="0.94901960780000005" green="0.47450980390000003" blue="0.51372549020000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="o9F-pJ-xbB" firstAttribute="top" secondItem="EpP-sn-6nT" secondAttribute="bottom" id="BSa-cu-VE8"/>
-                            <constraint firstItem="Zb4-07-we6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BjV-1O-oOi"/>
-                            <constraint firstItem="EpP-sn-6nT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="PVs-Ob-2ZP"/>
-                            <constraint firstItem="EpP-sn-6nT" firstAttribute="top" secondItem="Zb4-07-we6" secondAttribute="bottom" constant="20" id="PWo-AI-7YZ"/>
-                            <constraint firstItem="EpP-sn-6nT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="QtZ-AK-KuR"/>
-                            <constraint firstItem="o9F-pJ-xbB" firstAttribute="centerX" secondItem="EpP-sn-6nT" secondAttribute="centerX" id="W5R-1e-t8C"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EpP-sn-6nT" secondAttribute="trailing" constant="20" id="XzK-Ti-AvE"/>
-                            <constraint firstItem="EpP-sn-6nT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="eVe-ry-jvq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Zb4-07-we6" secondAttribute="trailing" id="stc-gg-vLY"/>
-                            <constraint firstItem="Zb4-07-we6" firstAttribute="centerX" secondItem="EpP-sn-6nT" secondAttribute="centerX" id="vp7-Ge-HEm"/>
+                            <constraint firstItem="Zb4-07-we6" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-50" id="18G-rN-vTX"/>
+                            <constraint firstItem="Zb4-07-we6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jMw-cT-mrK"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -57,10 +36,4 @@
             <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="launch" width="350" height="263.33334350585938"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
